[package]
name = "draw-from-video"
version = "0.1.0"
authors = ["Simon Swartzman <simon.swartzman@gmail.com>"]
description = "Parses video into a line drawing"
license = "MIT/Apache-2.0"
repository = "https://github.com/rtzm/draw-from-video"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
