[package]
name = "draw-from-video"
version = "0.1.0"
authors = ["Simon Swartzman <simon.swartzman@gmail.com>"]
description = "Parses video into a line drawing"
license = "MIT/Apache-2.0"
repository = "https://github.com/rtzm/draw-from-video"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ['console'] }
correlation_flow = "0.1.4"
console_error_panic_hook = "0.1.7"